Packages_2024/asound2_1.2.11_(alsa)/asound/control.inc

{$IFDEF read_interface}


type
  Tsnd_aes_iec958_t = record
    status: array[0..23] of byte;
    subcode: array[0..146] of byte;
    pad: byte;
    dig_subframe: array[0..3] of byte;
  end;
  Psnd_aes_iec958_t = ^Tsnd_aes_iec958_t;

  Psnd_ctl_card_info_t = type Pointer;
  PPsnd_ctl_card_info_t = ^Psnd_ctl_card_info_t;
  Psnd_ctl_elem_id_t = type Pointer;
  PPsnd_ctl_elem_id_t = ^Psnd_ctl_elem_id_t;
  Psnd_ctl_elem_list_t = type Pointer;
  PPsnd_ctl_elem_list_t = ^Psnd_ctl_elem_list_t;
  Psnd_ctl_elem_info_t = type Pointer;
  PPsnd_ctl_elem_info_t = ^Psnd_ctl_elem_info_t;
  Psnd_ctl_elem_value_t = type Pointer;
  PPsnd_ctl_elem_value_t = ^Psnd_ctl_elem_value_t;
  Psnd_ctl_event_t = type Pointer;
  PPsnd_ctl_event_t = ^Psnd_ctl_event_t;

type
  Psnd_ctl_elem_type_t = ^Tsnd_ctl_elem_type_t;
  Tsnd_ctl_elem_type_t = longint;

const
  SND_CTL_ELEM_TYPE_NONE = 0;
  SND_CTL_ELEM_TYPE_BOOLEAN = 1;
  SND_CTL_ELEM_TYPE_INTEGER = 2;
  SND_CTL_ELEM_TYPE_ENUMERATED = 3;
  SND_CTL_ELEM_TYPE_BYTES = 4;
  SND_CTL_ELEM_TYPE_IEC958 = 5;
  SND_CTL_ELEM_TYPE_INTEGER64 = 6;
  SND_CTL_ELEM_TYPE_LAST = SND_CTL_ELEM_TYPE_INTEGER64;

type
  Psnd_ctl_elem_iface_t = ^Tsnd_ctl_elem_iface_t;
  Tsnd_ctl_elem_iface_t = longint;

const
  SND_CTL_ELEM_IFACE_CARD = 0;
  SND_CTL_ELEM_IFACE_HWDEP = 1;
  SND_CTL_ELEM_IFACE_MIXER = 2;
  SND_CTL_ELEM_IFACE_PCM = 3;
  SND_CTL_ELEM_IFACE_RAWMIDI = 4;
  SND_CTL_ELEM_IFACE_TIMER = 5;
  SND_CTL_ELEM_IFACE_SEQUENCER = 6;
  SND_CTL_ELEM_IFACE_LAST = SND_CTL_ELEM_IFACE_SEQUENCER;

type
  Psnd_ctl_event_type_t = ^Tsnd_ctl_event_type_t;
  Tsnd_ctl_event_type_t = longint;

const
  SND_CTL_EVENT_ELEM = 0;
  SND_CTL_EVENT_LAST = SND_CTL_EVENT_ELEM;

const
  SND_CTL_EVENT_MASK_REMOVE = not (0);
  SND_CTL_EVENT_MASK_VALUE = 1 shl 0;
  SND_CTL_EVENT_MASK_INFO = 1 shl 1;
  SND_CTL_EVENT_MASK_ADD = 1 shl 2;
  SND_CTL_EVENT_MASK_TLV = 1 shl 3;
  SND_CTL_NAME_NONE = '';
  SND_CTL_NAME_PLAYBACK = 'Playback ';
  SND_CTL_NAME_CAPTURE = 'Capture ';
  SND_CTL_NAME_IEC958_NONE = '';
  SND_CTL_NAME_IEC958_SWITCH = 'Switch';
  SND_CTL_NAME_IEC958_VOLUME = 'Volume';
  SND_CTL_NAME_IEC958_DEFAULT = 'Default';
  SND_CTL_NAME_IEC958_MASK = 'Mask';
  SND_CTL_NAME_IEC958_CON_MASK = 'Con Mask';
  SND_CTL_NAME_IEC958_PRO_MASK = 'Pro Mask';
  SND_CTL_NAME_IEC958_PCM_STREAM = 'PCM Stream';
  SND_CTL_POWER_MASK = $ff00;
  SND_CTL_POWER_D0 = $0000;
  SND_CTL_POWER_D1 = $0100;
  SND_CTL_POWER_D2 = $0200;
  SND_CTL_POWER_D3 = $0300;
  SND_CTL_POWER_D3hot = SND_CTL_POWER_D3 or $0000;
  SND_CTL_POWER_D3cold = SND_CTL_POWER_D3 or $0001;
  SND_CTL_TLVT_CONTAINER = $0000;
  SND_CTL_TLVT_DB_SCALE = $0001;
  SND_CTL_TLVT_DB_LINEAR = $0002;
  SND_CTL_TLVT_DB_RANGE = $0003;
  SND_CTL_TLVT_DB_MINMAX = $0004;
  SND_CTL_TLVT_DB_MINMAX_MUTE = $0005;
  SND_CTL_TLV_DB_GAIN_MUTE = -(9999999);
  SND_CTL_TLVT_CHMAP_FIXED = $00101;
  SND_CTL_TLVT_CHMAP_VAR = $00102;
  SND_CTL_TLVT_CHMAP_PAIRED = $00103;

type
  Psnd_ctl_type_t = ^Tsnd_ctl_type_t;
  Tsnd_ctl_type_t = longint;

const
  SND_CTL_TYPE_HW = 0;
  SND_CTL_TYPE_SHM = 1;
  SND_CTL_TYPE_INET = 2;
  SND_CTL_TYPE_EXT = 3;
  SND_CTL_TYPE_REMAP = 4;

const
  SND_CTL_NONBLOCK_ = $0001;
  SND_CTL_ASYNC = $0002;
  SND_CTL_READONLY = $0004;
  SND_CTL_EINTR = $0080;

type
  Psnd_ctl_t = type Pointer;
  PPsnd_ctl_t = ^Psnd_ctl_t;

const
  SND_SCTL_NOFREE = $0001;

type
  Psnd_sctl_t = type Pointer;
  PPsnd_sctl_t = ^Psnd_sctl_t;

function snd_card_load(card: longint): longint; cdecl; external libasound;
function snd_card_next(card: Plongint): longint; cdecl; external libasound;
function snd_card_get_index(name: pchar): longint; cdecl; external libasound;
function snd_card_get_name(card: longint; name: PPchar): longint; cdecl; external libasound;
function snd_card_get_longname(card: longint; name: PPchar): longint; cdecl; external libasound;
function snd_ctl_open(ctl: PPsnd_ctl_t; name: pchar; mode: longint): longint; cdecl; external libasound;
function snd_ctl_open_lconf(ctl: PPsnd_ctl_t; name: pchar; mode: longint; lconf: Psnd_config_t): longint; cdecl; external libasound;
function snd_ctl_open_fallback(ctl: PPsnd_ctl_t; root: Psnd_config_t; name: pchar; orig_name: pchar; mode: longint): longint; cdecl; external libasound;
function snd_ctl_close(ctl: Psnd_ctl_t): longint; cdecl; external libasound;
function snd_ctl_nonblock(ctl: Psnd_ctl_t; nonblock: longint): longint; cdecl; external libasound;

function snd_ctl_abort(ctl: Psnd_ctl_t): integer; inline;

function snd_async_add_ctl_handler(handler: PPsnd_async_handler_t; ctl: Psnd_ctl_t; callback: Tsnd_async_callback_t; private_data: pointer): longint; cdecl; external libasound;
function snd_async_handler_get_ctl(handler: Psnd_async_handler_t): Psnd_ctl_t; cdecl; external libasound;
function snd_ctl_poll_descriptors_count(ctl: Psnd_ctl_t): longint; cdecl; external libasound;
function snd_ctl_poll_descriptors(ctl: Psnd_ctl_t; pfds: Ppollfd; space: dword): longint; cdecl; external libasound;
function snd_ctl_poll_descriptors_revents(ctl: Psnd_ctl_t; pfds: Ppollfd; nfds: dword; revents: Pword): longint; cdecl; external libasound;
function snd_ctl_subscribe_events(ctl: Psnd_ctl_t; subscribe: longint): longint; cdecl; external libasound;
function snd_ctl_card_info(ctl: Psnd_ctl_t; info: Psnd_ctl_card_info_t): longint; cdecl; external libasound;
function snd_ctl_elem_list(ctl: Psnd_ctl_t; list: Psnd_ctl_elem_list_t): longint; cdecl; external libasound;
function snd_ctl_elem_info(ctl: Psnd_ctl_t; info: Psnd_ctl_elem_info_t): longint; cdecl; external libasound;
function snd_ctl_elem_read(ctl: Psnd_ctl_t; data: Psnd_ctl_elem_value_t): longint; cdecl; external libasound;
function snd_ctl_elem_write(ctl: Psnd_ctl_t; data: Psnd_ctl_elem_value_t): longint; cdecl; external libasound;
function snd_ctl_elem_lock(ctl: Psnd_ctl_t; id: Psnd_ctl_elem_id_t): longint; cdecl; external libasound;
function snd_ctl_elem_unlock(ctl: Psnd_ctl_t; id: Psnd_ctl_elem_id_t): longint; cdecl; external libasound;
function snd_ctl_elem_tlv_read(ctl: Psnd_ctl_t; id: Psnd_ctl_elem_id_t; tlv: Pdword; tlv_size: dword): longint; cdecl; external libasound;
function snd_ctl_elem_tlv_write(ctl: Psnd_ctl_t; id: Psnd_ctl_elem_id_t; tlv: Pdword): longint; cdecl; external libasound;
function snd_ctl_elem_tlv_command(ctl: Psnd_ctl_t; id: Psnd_ctl_elem_id_t; tlv: Pdword): longint; cdecl; external libasound;

function snd_ctl_hwdep_next_device(ctl: Psnd_ctl_t; device: Plongint): longint; cdecl; external libasound;
function snd_ctl_hwdep_info(ctl: Psnd_ctl_t; info: Psnd_hwdep_info_t): longint; cdecl; external libasound;

function snd_ctl_pcm_next_device(ctl: Psnd_ctl_t; device: Plongint): longint; cdecl; external libasound;
function snd_ctl_pcm_info(ctl: Psnd_ctl_t; info: Psnd_pcm_info_t): longint; cdecl; external libasound;
function snd_ctl_pcm_prefer_subdevice(ctl: Psnd_ctl_t; subdev: longint): longint; cdecl; external libasound;

function snd_ctl_rawmidi_next_device(ctl: Psnd_ctl_t; device: Plongint): longint; cdecl; external libasound;
function snd_ctl_rawmidi_info(ctl: Psnd_ctl_t; info: Psnd_rawmidi_info_t): longint; cdecl; external libasound;
function snd_ctl_rawmidi_prefer_subdevice(ctl: Psnd_ctl_t; subdev: longint): longint; cdecl; external libasound;

function snd_ctl_ump_next_device(ctl: Psnd_ctl_t; device: Plongint): longint; cdecl; external libasound;
function snd_ctl_ump_endpoint_info(ctl: Psnd_ctl_t; info: Psnd_ump_endpoint_info_t): longint; cdecl; external libasound;
function snd_ctl_ump_block_info(ctl: Psnd_ctl_t; info: Psnd_ump_block_info_t): longint; cdecl; external libasound;

function snd_ctl_set_power_state(ctl: Psnd_ctl_t; state: dword): longint; cdecl; external libasound;
function snd_ctl_get_power_state(ctl: Psnd_ctl_t; state: Pdword): longint; cdecl; external libasound;
function snd_ctl_read(ctl: Psnd_ctl_t; event: Psnd_ctl_event_t): longint; cdecl; external libasound;
function snd_ctl_wait(ctl: Psnd_ctl_t; timeout: longint): longint; cdecl; external libasound;
function snd_ctl_name(ctl: Psnd_ctl_t): pchar; cdecl; external libasound;
function snd_ctl_type(ctl: Psnd_ctl_t): Tsnd_ctl_type_t; cdecl; external libasound;
function snd_ctl_elem_type_name(_type: Tsnd_ctl_elem_type_t): pchar; cdecl; external libasound;
function snd_ctl_elem_iface_name(iface: Tsnd_ctl_elem_iface_t): pchar; cdecl; external libasound;
function snd_ctl_event_type_name(_type: Tsnd_ctl_event_type_t): pchar; cdecl; external libasound;
function snd_ctl_event_elem_get_mask(obj: Psnd_ctl_event_t): dword; cdecl; external libasound;
function snd_ctl_event_elem_get_numid(obj: Psnd_ctl_event_t): dword; cdecl; external libasound;
procedure snd_ctl_event_elem_get_id(obj: Psnd_ctl_event_t; ptr: Psnd_ctl_elem_id_t); cdecl; external libasound;
function snd_ctl_event_elem_get_interface(obj: Psnd_ctl_event_t): Tsnd_ctl_elem_iface_t; cdecl; external libasound;
function snd_ctl_event_elem_get_device(obj: Psnd_ctl_event_t): dword; cdecl; external libasound;
function snd_ctl_event_elem_get_subdevice(obj: Psnd_ctl_event_t): dword; cdecl; external libasound;
function snd_ctl_event_elem_get_name(obj: Psnd_ctl_event_t): pchar; cdecl; external libasound;
function snd_ctl_event_elem_get_index(obj: Psnd_ctl_event_t): dword; cdecl; external libasound;
function snd_ctl_elem_list_alloc_space(obj: Psnd_ctl_elem_list_t; entries: dword): longint; cdecl; external libasound;
procedure snd_ctl_elem_list_free_space(obj: Psnd_ctl_elem_list_t); cdecl; external libasound;
function snd_ctl_ascii_elem_id_get(id: Psnd_ctl_elem_id_t): pchar; cdecl; external libasound;
function snd_ctl_ascii_elem_id_parse(dst: Psnd_ctl_elem_id_t; str: pchar): longint; cdecl; external libasound;
function snd_ctl_ascii_value_parse(handle: Psnd_ctl_t; dst: Psnd_ctl_elem_value_t; info: Psnd_ctl_elem_info_t; value: pchar): longint; cdecl; external libasound;
function snd_ctl_elem_id_sizeof: Tsize_t; cdecl; external libasound;

function snd_ctl_elem_id_malloc(ptr: PPsnd_ctl_elem_id_t): longint; cdecl; external libasound;
procedure snd_ctl_elem_id_free(obj: Psnd_ctl_elem_id_t); cdecl; external libasound;
procedure snd_ctl_elem_id_clear(obj: Psnd_ctl_elem_id_t); cdecl; external libasound;
procedure snd_ctl_elem_id_copy(dst: Psnd_ctl_elem_id_t; src: Psnd_ctl_elem_id_t); cdecl; external libasound;
function snd_ctl_elem_id_compare_numid(id1: Psnd_ctl_elem_id_t; id2: Psnd_ctl_elem_id_t): longint; cdecl; external libasound;
function snd_ctl_elem_id_compare_set(id1: Psnd_ctl_elem_id_t; id2: Psnd_ctl_elem_id_t): longint; cdecl; external libasound;
function snd_ctl_elem_id_get_numid(obj: Psnd_ctl_elem_id_t): dword; cdecl; external libasound;
function snd_ctl_elem_id_get_interface(obj: Psnd_ctl_elem_id_t): Tsnd_ctl_elem_iface_t; cdecl; external libasound;
function snd_ctl_elem_id_get_device(obj: Psnd_ctl_elem_id_t): dword; cdecl; external libasound;
function snd_ctl_elem_id_get_subdevice(obj: Psnd_ctl_elem_id_t): dword; cdecl; external libasound;
function snd_ctl_elem_id_get_name(obj: Psnd_ctl_elem_id_t): pchar; cdecl; external libasound;
function snd_ctl_elem_id_get_index(obj: Psnd_ctl_elem_id_t): dword; cdecl; external libasound;
procedure snd_ctl_elem_id_set_numid(obj: Psnd_ctl_elem_id_t; val: dword); cdecl; external libasound;
procedure snd_ctl_elem_id_set_interface(obj: Psnd_ctl_elem_id_t; val: Tsnd_ctl_elem_iface_t); cdecl; external libasound;
procedure snd_ctl_elem_id_set_device(obj: Psnd_ctl_elem_id_t; val: dword); cdecl; external libasound;
procedure snd_ctl_elem_id_set_subdevice(obj: Psnd_ctl_elem_id_t; val: dword); cdecl; external libasound;
procedure snd_ctl_elem_id_set_name(obj: Psnd_ctl_elem_id_t; val: pchar); cdecl; external libasound;
procedure snd_ctl_elem_id_set_index(obj: Psnd_ctl_elem_id_t; val: dword); cdecl; external libasound;
function snd_ctl_card_info_sizeof: Tsize_t; cdecl; external libasound;
